# rptree

./: CMakeLists.txt  README.md  procfs.c  rpshell.c  rptree.c  rptree.h
example/: 1.sh  2.sh  pipe.sh
tests/: test.sh
tests/smart/: bash-c_env.json  bash-c_env.txt  fork_dep4.json  fork_dep4.txt  smart.json  smart.txt
